// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivityHistoryItem connector mapStateToProps generates the correct props 1`] = `
Object {
  "activities": Array [
    Object {
      "baseType": "Activity",
      "createdAt": "2018-09-17T10:34:22+00:00",
      "createdBy": Object {
        "displayName": "DynamicsAATest Test",
        "id": "9e0dca1e-0538-e811-80c9-005056825b41",
        "type": "employee",
      },
      "description": "test",
      "id": "DEF456",
      "link": Object {
        "path": "/api/v1/interactions/506669c7-80c9-4b4f-9b5b-c9f19502f23f",
        "service": "interactions/web",
      },
      "modifiedAt": "2018-09-17T10:34:23+00:00",
      "summary": "Arrears Interaction",
      "type": "Email",
    },
    Object {
      "baseType": "Activity",
      "createdAt": "2018-09-17T10:34:22+00:00",
      "createdBy": Object {
        "displayName": "DynamicsAATest Test",
        "id": "9e0dca1e-0538-e811-80c9-005056825b41",
        "type": "employee",
      },
      "description": "new test",
      "id": "UE21sa",
      "link": Object {
        "path": "/api/v1/interactions/506669c7-80c9-4b4f-9b5b-c9f19502f23f",
        "service": "interactions/web",
      },
      "modifiedAt": "2018-09-17T10:34:23+00:00",
      "summary": "Arrears Interaction",
      "type": "Email",
    },
  ],
  "activityDetail": Object {
    "createdOn": "2018-09-28T13:28:15.133Z",
    "detail": "string",
    "id": "string",
    "raisedBy": Object {
      "id": "string",
      "name": "string",
      "type": "Employee",
    },
    "teamName": Object {
      "referrableTeams": Array [
        Object {
          "id": "string",
          "name": "string",
        },
        Object {
          "id": "string",
          "name": "string",
        },
        Object {
          "id": "string",
          "name": "string",
        },
      ],
    },
    "type": "Referral",
  },
  "activityError": false,
  "activityHistoryNavigation": Object {
    "getNextHistoryId": [Function],
    "getPreviousHistoryId": [Function],
    "isFirst": [Function],
    "isLast": [Function],
  },
  "activityLoading": false,
  "arrearsId": "ABC123",
  "attachments": Array [],
  "attachmentsError": false,
  "attachmentsHeading": "Attachments",
  "attachmentsLoading": false,
  "breadcrumb": Array [
    Object {
      "href": "#{Dashboards.Core.CustomerBaseURL}",
      "id": "breadcrumb-dashboard",
      "label": "Dashboard",
    },
    Object {
      "id": "breadcrumb-arrearsDashboard",
      "label": "My arrears",
      "to": "/",
    },
    Object {
      "label": "Arrears details",
      "to": "/arrears-details/ABC123",
    },
    Object {
      "id": "breadcrumb-Activity history item",
      "label": "Activity history item",
    },
  ],
  "canGoNext": true,
  "canGoPrevious": false,
  "genericErrorText": "We have encountered an issue whilst trying to retrieve this information, please try again later.",
  "goToHistoryItem": [Function],
  "heading": "Activity history item",
  "itemId": "DEF456",
  "labels": Object {
    "back": "Back",
    "createdOn": "Created on",
    "date": "Date:",
    "description": "Description",
    "detail": "Details:",
    "interactionTime": "Date/time of interaction",
    "interactionWith": "Interaction with",
    "modified": "Last modified",
    "name": "Contact Name:",
    "next": "next history item",
    "previous": "previous history item",
    "raisedBy": "Raised by",
  },
  "legalReferralLabels": Object {
    "approval": "Approval on",
    "by": "By",
    "createdAt": "Referral date",
    "createdBy": "Raised by contact",
    "formName": "Legal case referral type",
    "lastModifiedOn": "Last modified on",
    "link": "Link to Referral",
    "owner": "Owner",
    "progressStatus": "Legal Referral Pack status",
    "rejected": "Rejected on",
    "status": "Status",
  },
  "pauseLabels": Object {
    "approvedBy": "By",
    "approvedOn": "On",
    "cancelReason": "Cancel Reason",
    "createdBy": "By",
    "createdOn": "Created on",
    "endDate": "End Date",
    "furtherDetail": "Details",
    "heading": "Pause",
    "isApproved": "Approved",
    "isExtended": "(extension)",
    "isRejected": "Rejected",
    "lastModifiedBy": "By",
    "lastModifiedOn": "Last modified on",
    "notified": "Notification sent to",
    "notifiedOn": "On",
    "originalStartDate": "Start Date",
    "ownerName": "Assigned to",
    "reason": "Reason",
    "status": "Current state",
  },
  "paymentLabels": Object {
    "CardPayment": "One off payment",
    "DirectDebit": "Direct Debit",
    "RecurringCard": "Recurring",
    "createdBy": "Raised by",
    "createdOn": "Created on",
    "endDate": "Scheduled End Date",
    "firstPayment": "Date of First Payment",
    "frequency": Object {
      "Fortnightly": "Fortnightly",
      "Fourweekly": "Every 4 weeks",
      "HalfYearly": "Half yearly",
      "LastFridayOfTheMonth": "Last Friday of the month",
      "Monthly": "Monthly",
      "Quarterly": "Quarterly",
      "Weekly": "Weekly",
      "Yearly": "Yearly",
    },
    "heading": "Payment",
    "instalmentAmount": "Instalment Amount",
    "paymentAmount": "Payment amount",
    "paymentFrequency": "Payment frequency",
    "paymentMethod": "Payment Method",
    "paymentStatus": "Payment Status",
  },
  "paymentPlanLabels": Object {
    "attachFile": "Attach documents",
    "backButton": "Back",
    "closeButton": "Close Payment Plan",
    "closePlanDescription": "Are you sure you want to close this payment plan?",
    "closePlanDisclaimer": "Closing this payment plan will not automatically terminate the financial arrangement. Separate action required",
    "closePlanNo": "No",
    "closePlanYes": "Yes, Close the plan",
    "contactName": "Contact Name",
    "description": "Note",
    "detail": "Payment Plan type",
    "endDate": "End date",
    "endedBy": "Ended By",
    "every": "Every",
    "heading": "Payment Plan",
    "installment": "Instalment",
    "installmentAmount": "Instalment amount",
    "installmentArrangementFormat": "{amount} Every {period} {schedule}(s)",
    "installmentFrequency": "Instalment frequency",
    "installmentPeriod": "Instalment period",
    "lastModifiedAt": "Last modified",
    "lastModifiedBy": "By",
    "newArrangementOption": "New Arrangement",
    "note": "Note",
    "paymentPlanType": "Payment plan type",
    "pleaseSelectAReason": "Please select a reason...",
    "raisedBy": "Raised by",
    "reasonSelect": "Select reason",
    "reasonText": "Enter a description",
    "startDate": "Start date",
    "status": "Status",
    "submitButton": "Create Payment Plan",
    "tenantDefaultOption": "Tenant Default",
  },
  "redirectToDetailsPage": [Function],
  "referralLabels": Object {
    "createdOn": "Created",
    "detail": "Detail",
    "heading": "Referral",
    "raisedBy": "Raised By",
    "teamName": "Referred Team",
  },
  "values": Object {
    "inbound": "Inbound",
    "interactionWith": "{name} ({type})",
    "outbound": "Outbound",
  },
}
`;

exports[`ActivityHistoryItem connector mergeProps generates the correct props 1`] = `
Object {
  "activities": Array [
    Object {
      "baseType": "Activity",
      "createdAt": "2018-09-17T10:34:22+00:00",
      "createdBy": Object {
        "displayName": "DynamicsAATest Test",
        "id": "9e0dca1e-0538-e811-80c9-005056825b41",
        "type": "employee",
      },
      "description": "test",
      "id": "DEF456",
      "link": Object {
        "path": "/api/v1/interactions/506669c7-80c9-4b4f-9b5b-c9f19502f23f",
        "service": "interactions/web",
      },
      "modifiedAt": "2018-09-17T10:34:23+00:00",
      "summary": "Arrears Interaction",
      "type": "Email",
    },
    Object {
      "baseType": "Activity",
      "createdAt": "2018-09-17T10:34:22+00:00",
      "createdBy": Object {
        "displayName": "DynamicsAATest Test",
        "id": "9e0dca1e-0538-e811-80c9-005056825b41",
        "type": "employee",
      },
      "description": "new test",
      "id": "UE21sa",
      "link": Object {
        "path": "/api/v1/interactions/506669c7-80c9-4b4f-9b5b-c9f19502f23f",
        "service": "interactions/web",
      },
      "modifiedAt": "2018-09-17T10:34:23+00:00",
      "summary": "Arrears Interaction",
      "type": "Email",
    },
  ],
  "activityDetail": Object {
    "createdOn": "2018-09-28T13:28:15.133Z",
    "detail": "string",
    "id": "string",
    "raisedBy": Object {
      "id": "string",
      "name": "string",
      "type": "Employee",
    },
    "teamName": Object {
      "referrableTeams": Array [
        Object {
          "id": "string",
          "name": "string",
        },
        Object {
          "id": "string",
          "name": "string",
        },
        Object {
          "id": "string",
          "name": "string",
        },
      ],
    },
    "type": "Referral",
  },
  "activityError": false,
  "activityLoading": false,
  "attachments": Array [],
  "attachmentsError": false,
  "attachmentsHeading": "Attachments",
  "attachmentsLoading": false,
  "bar": "baz",
  "canGoNext": true,
  "canGoPrevious": false,
  "genericErrorText": "We have encountered an issue whilst trying to retrieve this information, please try again later.",
  "getActivityById": [Function],
  "getActivityHistory": [Function],
  "history": Object {
    "push": [Function],
  },
  "invalidateActivityDetail": [Function],
  "itemId": "DEF456",
  "labels": Object {
    "back": "Back",
    "createdOn": "Created on",
    "date": "Date:",
    "description": "Description",
    "detail": "Details:",
    "interactionTime": "Date/time of interaction",
    "interactionWith": "Interaction with",
    "modified": "Last modified",
    "name": "Contact Name:",
    "next": "next history item",
    "previous": "previous history item",
    "raisedBy": "Raised by",
  },
  "legalReferralLabels": Object {
    "approval": "Approval on",
    "by": "By",
    "createdAt": "Referral date",
    "createdBy": "Raised by contact",
    "formName": "Legal case referral type",
    "lastModifiedOn": "Last modified on",
    "link": "Link to Referral",
    "owner": "Owner",
    "progressStatus": "Legal Referral Pack status",
    "rejected": "Rejected on",
    "status": "Status",
  },
  "match": Object {
    "params": Object {
      "arrearsId": "ABC123",
      "itemId": "DEF456",
    },
  },
  "onBack": [Function],
  "onNext": [Function],
  "onPrevious": [Function],
  "pauseLabels": Object {
    "approvedBy": "By",
    "approvedOn": "On",
    "cancelReason": "Cancel Reason",
    "createdBy": "By",
    "createdOn": "Created on",
    "endDate": "End Date",
    "furtherDetail": "Details",
    "heading": "Pause",
    "isApproved": "Approved",
    "isExtended": "(extension)",
    "isRejected": "Rejected",
    "lastModifiedBy": "By",
    "lastModifiedOn": "Last modified on",
    "notified": "Notification sent to",
    "notifiedOn": "On",
    "originalStartDate": "Start Date",
    "ownerName": "Assigned to",
    "reason": "Reason",
    "status": "Current state",
  },
  "paymentLabels": Object {
    "CardPayment": "One off payment",
    "DirectDebit": "Direct Debit",
    "RecurringCard": "Recurring",
    "createdBy": "Raised by",
    "createdOn": "Created on",
    "endDate": "Scheduled End Date",
    "firstPayment": "Date of First Payment",
    "frequency": Object {
      "Fortnightly": "Fortnightly",
      "Fourweekly": "Every 4 weeks",
      "HalfYearly": "Half yearly",
      "LastFridayOfTheMonth": "Last Friday of the month",
      "Monthly": "Monthly",
      "Quarterly": "Quarterly",
      "Weekly": "Weekly",
      "Yearly": "Yearly",
    },
    "heading": "Payment",
    "instalmentAmount": "Instalment Amount",
    "paymentAmount": "Payment amount",
    "paymentFrequency": "Payment frequency",
    "paymentMethod": "Payment Method",
    "paymentStatus": "Payment Status",
  },
  "paymentPlanLabels": Object {
    "attachFile": "Attach documents",
    "backButton": "Back",
    "closeButton": "Close Payment Plan",
    "closePlanDescription": "Are you sure you want to close this payment plan?",
    "closePlanDisclaimer": "Closing this payment plan will not automatically terminate the financial arrangement. Separate action required",
    "closePlanNo": "No",
    "closePlanYes": "Yes, Close the plan",
    "contactName": "Contact Name",
    "description": "Note",
    "detail": "Payment Plan type",
    "endDate": "End date",
    "endedBy": "Ended By",
    "every": "Every",
    "heading": "Payment Plan",
    "installment": "Instalment",
    "installmentAmount": "Instalment amount",
    "installmentArrangementFormat": "{amount} Every {period} {schedule}(s)",
    "installmentFrequency": "Instalment frequency",
    "installmentPeriod": "Instalment period",
    "lastModifiedAt": "Last modified",
    "lastModifiedBy": "By",
    "newArrangementOption": "New Arrangement",
    "note": "Note",
    "paymentPlanType": "Payment plan type",
    "pleaseSelectAReason": "Please select a reason...",
    "raisedBy": "Raised by",
    "reasonSelect": "Select reason",
    "reasonText": "Enter a description",
    "startDate": "Start date",
    "status": "Status",
    "submitButton": "Create Payment Plan",
    "tenantDefaultOption": "Tenant Default",
  },
  "referralLabels": Object {
    "createdOn": "Created",
    "detail": "Detail",
    "heading": "Referral",
    "raisedBy": "Raised By",
    "teamName": "Referred Team",
  },
  "updatePageHeader": [Function],
  "values": Object {
    "inbound": "Inbound",
    "interactionWith": "{name} ({type})",
    "outbound": "Outbound",
  },
}
`;
